# Crypto

./: .env.example  .gitignore  .nojekyll  CHINA_SEARCH_SETUP.md  CLAUDE.md  Dockerfile  README.md  README_QUICKSTART.md  README_WEBSITE.md  backtest.py  data_prepare.py  debug_serpapi.py  docker-compose.yml  index.html  launch.sh  plan.md  prd.md  pyproject.toml  quick_start.py  quickstart.py  reRank_api.md  run_dashboard.py  simple_dashboard.py  test_all_apis.py  test_binance_simple.py  test_china_search.py  test_data_generation.py  test_dataset_generation.py  test_deepseek.py  test_direct_search.py  test_domain_coverage.py  test_duckduckgo_search.py  test_duckduckgo_simple.py  test_fixes.py  test_integration.py  test_langsearch_integration.py  test_lansearch.py  test_mock_system.py  test_phase_completion.py  test_serpapi.py  (+7 more)
.claude/: settings.json  settings.local.json
.github/workflows/: deploy.yml
assets/css/: components.css  styles.css
assets/js/: charts.js  main.js
docs/: API.md  QUICKSTART.md  README.md  architecture.md  deployment.md  getting-started.md  llm-setup.md  training.md
reports/: phase4_summary.json
scripts/: check_config.py  collect_data.py  generate_dataset.py  generate_mock_dataset.py  init-db.sql  init_influxdb.py  live_test.py  phase3_demo.py  phase3_demo_fixed.py  phase4_demo.py  phase4_demo_simple.py  setup_system.py  setup_testnet.py  test_api_connection.py  test_simple_connection.py  validate_setup.py
src/cryptorl/: __init__.py
src/cryptorl/backtesting/: engine.py
src/cryptorl/config/: __init__.py  settings.py
src/cryptorl/llm/: __init__.py  confidence_generator.py  deepseek_client.py  langsearch_client.py  llm_client.py  llm_factory.py  models.py  rag_pipeline.py
src/cryptorl/monitoring/: dashboard.py
src/cryptorl/risk_management/: risk_manager.py
src/cryptorl/rl/: __init__.py  agent.py  environment.py  evaluation.py  mamba_exploration.py  models.py  training.py
src/cryptorl/trading/: __init__.py  execution.py  risk_manager.py
src_backup_20250716_144424/cryptorl/rl/: environment.py
